065.como_saber_tudo_funcionando_corretamente

--- a/proposta/src/main/resources/application.properties
+++ b/proposta/src/main/resources/application.properties
@@ -13,3 +13,21 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:18080/auth/realms/nosso-cartao}
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_JWKS_URI:http://localhost:18080/auth/realms/nosso-cartao/protocol/openid-connect/certs}
+
+
+management.endpoints.enabled-by-default=false
+management.endpoint.health.enabled=true
+management.endpoint.metrics.enabled=true
+management.endpoint.info.enabled=true
+management.endpoint.prometheus.enabled=true
+management.endpoints.web.exposure.include=info,health,metrics,prometheus
+
+
+cartoes.host=${CARTOES_URL:http://localhost:8888/api/cartoes/}
+
+analise.host=${ANALISE_URL:http://localhost:9999/api/solicitacao/}
+
+
+management.metrics.tags.aplicacao=${NOME_DA_APLICACAO:proposta}
+management.metrics.tags.ambiente=${AMBIENTE:desenvolvimento}
+
