--- a/proposta/pom.xml
+++ b/proposta/pom.xml
@@ -95,6 +95,12 @@
 			<artifactId>logstash-logback-encoder</artifactId>
 			<version>6.4</version>
 		</dependency>
+
+		<dependency>
+			<groupId>io.opentracing.contrib</groupId>
+			<artifactId>opentracing-spring-jaeger-web-starter</artifactId>
+			<version>3.3.1</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
